--- a/rstudio.4.0.2
+++ b/rstudio.4.0.2
@@ -2,4 +2,4 @@ BootStrap: docker
 From: rocker/rstudio:4.0.2
 
 %post
-    chmod 777 /var/run/rstudio-server
+    chmod -R 777 /var/run/rstudio-server
