--- a/rstudio.4.0.2
+++ b/rstudio.4.0.2
@@ -2,5 +2,5 @@ BootStrap: docker
 From: rocker/rstudio:4.0.2
 
 %post
-    chmod -R 777 /var/run/rstudio-server
+    chmod -R 777 /var/run/
     chmod +t /var/run/rstudio-server
