--- a/rstudio.4.0.2
+++ b/rstudio.4.0.2
@@ -3,4 +3,5 @@ From: rocker/rstudio:4.0.2
 
 %post
     chmod -R 777 /var/run/
+    chmod -R 777 /etc/rstudio/
     chmod +t /var/run/rstudio-server
