--- a/rstudio.4.0.2
+++ b/rstudio.4.0.2
@@ -3,10 +3,17 @@ From: rocker/r-base:4.0.2
 
 %post
     export RSTUDIO_SERVER_PACKAGE=rstudio-server-1.3.1073-amd64.deb
-    apt-get install -y gdebi-core
-    wget https://download2.rstudio.org/server/bionic/amd64/$RSTUDIO_SERVER_PACKAGE
-    gdebi $RSTUDIO_SERVER_PACKAGE
-    rm $PACKAGE
+    apt-get update && apt-get install -y --no-install-recommends \
+        ca-certificates \
+        wget \
+        gdebi-core
+
+    wget --no-verbose -O rstudio-server.deb https://download2.rstudio.org/server/debian9/x86_64/$RSTUDIO_SERVER_PACKAGE
+    gdebi -n rstudio-server.deb
+    rm -f rstudio-server.deb
+    
 #    chmod -R 777 /var/run/rstudio-server
 #    chmod -R 777 /etc/rstudio/
 #    chmod +t /var/run/rstudio-server
+
+    rm -rf /var/lib/apt/lists/*
