--- a/rstudio.4.0.2
+++ b/rstudio.4.0.2
@@ -12,11 +12,12 @@ From: rocker/r-base:4.0.2
         wget \
         gdebi-core
     
-    # download and install package
+    # download rstudio server package
     wget --no-verbose -O rstudio-server.deb \
-        https://download2.rstudio.org/server/debian9/x86_64/rstudio-server-$RSERVER_VERSION-$RSERVER_ARCH.deb
-    gdebi -n rstudio-server.deb
-    rm -f rstudio-server.deb
+        https://download2.rstudio.org/server/bionic/amd64/rstudio-server-$RSERVER_VERSION-$RSERVER_ARCH.deb
+    
+    # install rstudio server
+    gdebi -n rstudio-server.deb && rm -f rstudio-server.deb
     
 #    chmod -R 777 /var/run/rstudio-server
 #    chmod -R 777 /etc/rstudio/
