--- a/rstudio.4.0.2
+++ b/rstudio.4.0.2
@@ -17,11 +17,12 @@ From: rocker/r-base:4.0.2
         https://download2.rstudio.org/server/bionic/amd64/rstudio-server-$RSERVER_VERSION-$RSERVER_ARCH.deb
     
     # install rstudio server
-    gdebi -n rstudio-server.deb && rm -f rstudio-server.deb
+    apt-get install -f rstudio-server.deb
     
 #    chmod -R 777 /var/run/rstudio-server
 #    chmod -R 777 /etc/rstudio/
 #    chmod +t /var/run/rstudio-server
 
     # apt cleanup
-    rm -rf /var/lib/apt/lists/*
+    rm -rf  rstudio-server.deb \
+            /var/lib/apt/lists/*
