--- a/rstudio.4.0.2
+++ b/rstudio.4.0.2
@@ -7,26 +7,22 @@ From: rocker/r-base:4.0.2
     export RSERVER_ARCH=amd64
 
     # get packages
-    apt-get update && apt-get install -y --no-install-recommends \
-        wget \
-        # rstudio dependencies 
-        libapparmor1 \
-        libedit2 \
-        libc6 \
-        psmisc \
-        rrdtool
-    
+    apt-get update && apt-get install -y \
+        wget gdebi apt-utils \
+        libapparmor1 libedit2 libc6 psmisc rrdtool \
+
     # download rstudio server package
     wget --no-verbose -O rstudio-server.deb \
         https://download2.rstudio.org/server/bionic/amd64/rstudio-server-$RSERVER_VERSION-$RSERVER_ARCH.deb
     
     # install rstudio server
-    dpkg -i rstudio-server.deb
+    gdebi -n rstudio.deb
     
 #    chmod -R 777 /var/run/rstudio-server
 #    chmod -R 777 /etc/rstudio/
 #    chmod +t /var/run/rstudio-server
 
     # apt cleanup
-    rm -rf  rstudio-server.deb \
-            /var/lib/apt/lists/*
+    rm -rf  rstudio-server.deb
+    apt autoremove -y && apt clean -y && apt purge -y && rm -rf /tmp/* /var/tmp/* /var/lib/apt/lists/*
+            
