--- a/rstudio.4.0.2
+++ b/rstudio.4.0.2
@@ -16,7 +16,7 @@ From: rocker/r-base:4.0.2
         https://download2.rstudio.org/server/bionic/amd64/rstudio-server-$RSERVER_VERSION-$RSERVER_ARCH.deb
     
     # install rstudio server
-    gdebi -n rstudio.deb
+    gdebi -n rstudio-server.deb
     
 #    chmod -R 777 /var/run/rstudio-server
 #    chmod -R 777 /etc/rstudio/
