--- a/rstudio.4.0.2
+++ b/rstudio.4.0.2
@@ -7,7 +7,7 @@ From: rocker/r-base:4.0.2
     export RSERVER_ARCH=amd64
 
     # get packages
-    apt-get update && apt-get install -y \
+    apt-get update && apt-get install -y -qq \
         wget gdebi apt-utils \
         libapparmor1 libedit2 libc6 psmisc rrdtool \
 
@@ -24,5 +24,5 @@ From: rocker/r-base:4.0.2
 
     # apt cleanup
     rm -rf  rstudio-server.deb
-    apt autoremove -y && apt clean -y && apt purge -y && rm -rf /tmp/* /var/tmp/* /var/lib/apt/lists/*
+    apt autoremove -y && apt clean -y && apt purge -y && rm -rf /var/lib/apt/lists/*
             
